# ode-tokimasu

./: .gitignore  .gitmodules  README.md
cpp/: CMakeLists.txt
cpp/include/: dop54.h  exampleODE.h  rk4.h  rkf45.h
cpp/src/: main.cpp
matlab/: runtest.m  setup_solver.m  setup_test.m
matlab/Hairer_code/: README.md
matlab/Hairer_code/MatlabNonStiff/: NonStiffExamples.txt  ReadMe.txt  dop54.m  dop54d.m  dop853.m  dop853d.m
matlab/Hairer_code/MatlabNonStiff/ExamplesDOP54/Arenstorf/: Arenstorf.m  dr_Arenstorf.m
matlab/Hairer_code/MatlabNonStiff/ExamplesDOP54/Ballode1/: Ballode1.m  dr_Ballode1.m
matlab/Hairer_code/MatlabNonStiff/ExamplesDOP54/Ballode2/: Ballode2.m  BallodeEventsFcn.m  BallodeFcn.m  dr_Ballode2.m
matlab/Hairer_code/MatlabNonStiff/ExamplesDOP853/: ReadmeExamples.txt
matlab/exampleODE/: exactSol01.m  exactSol02.m  exactSol03.m  exactSol04.m  exactSol05.m  exactSol06.m  exactSol07.m  exactSol08.m  exactSol09.m  exactSol10.m  exactSol11.m  exactSol12.m  exactSol13.m  jacobian07.m  test01.m  test02.m  test03.m  test04.m  test05.m  test06.m  test07.m  test08.m  test09.m  test10.m  test11.m  test12.m  test13.m
matlab/modified/: EulerMod.m  NewtonSolve.m
matlab/unmodified/: DOPRI54.m  ESDIRK23.m  Euler.m  RK4.m  RKF45.m
python/: numint.py  ode_solver.py  stepsize_controller.py  stepsize_controllers.py
python/_solver/: ckrk45.py  dop54.py  dverk65.py  euler.py  rals4.py  rk4.py  rk42.py  rkf45.py  rkf78.py
python/_stepsizeController/: h211ssc.py  h321ssc.py  ho110ssc.py  pidssc.py  pissc.py  ppidssc.py
python/solver/: rk4.py
(+142 files in other folders)
